fix routing issue

--- a/views/recipe_list.erb
+++ b/views/recipe_list.erb
@@ -5,11 +5,12 @@
 
   <ul>
     <% @recipes.each do |recipe| %>
-    <li><a href="/recipe_list/<%= recipe.id() %>"><%= recipe.name() %></a></li>
+    <li><a href="/recipe_detail/<%= recipe.id() %>"><%= recipe.name() %></a></li>
     <% end %>
   </ul>
 <% else %>
   <h3>There are no recipes, add a recipe!</h3>
 <% end %>
+
 
 <p><a href="/">Return to Home Page</a></p>
