--- a/views/index.erb
+++ b/views/index.erb
@@ -2,5 +2,5 @@
 
 Please select your options below:
 <br>
-<button type="button" name="add_recipe" class="btn-success"><a href="/recipe">Add recipe</a></button> <br> <br>
-<button type="button" name="view_recipe" class="btn-success"><a href="/recipes">View recipe(s)</button><br>
+<a href="/recipe">Add recipe</a><br>
+<a href="/recipes">View recipe(s)</button><br>
