update recipe title, update readme and add public folder

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,10 +2,11 @@
 <html>
   <head>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
-    <link rel='stylesheet' href='http://localhost:4567/css/styles.css'>
-    <script type='text/javascript' src='../js/scripts.js'></script>
+    <script type='text/javascript' src='./js/scripts.js'></script>
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js'></script>
-    <title></title>
+    <script src="./css/styles.css">
+    </script>
+    <title>recipe box</title>
   </head>
   <body>
     <div class='container'>
