--- a/views/recipe_detail.erb
+++ b/views/recipe_detail.erb
@@ -6,8 +6,8 @@ Instructions: <%= @recipes.instructions() %> <br>
 
 <form action="/recipe_detail/<%= @recipes.id() %>" method="post">
   <input name="_method" type="hidden" value="delete">
-  <button type="submit" name="button">Delete list</button>
+  <button type="submit" name="button">Delete recipe</button>
 </form>
-
-
+<br>
+<p><a href="/recipe_edit/<%= @recipes.id() %>">Update recipe title</a></p>
 <p><a href="/">Return to Home Page</a></p>
